- A method SpacePopint::spacePointOnSubspace has been added to project a
  point on a sub-space of a SpaceComposite (there is still Memory copies!)
- A sample index (in the Db) and a boolean (target) have been added to the SpacePoint members
- Adding the BASH version for files "compare_test" and "update_test" used to handle non-regression output files.

Miscellaneous
-------------
- Add the location of non-regression specific files if needed in compare_test and update_test

Release 1.4.1
=============
- Fix Zenodo configuration to restore DOI generation

Release 1.4.0
=============
- AMatrix: Correction in linearCombination (when processing Symmetric matrices and if this coincides with mat*)
- Seed has been removed for arguments in all SPDE functions. Use law_set_random_seed before a call instead).
- Bug with K-Bessel function (problem for large values) has been fixed (by using std::cyl_bessel_k for Windows and Linux and a trick for MacOS for which std::cyl_bessel_k is not available).
- The interfaces to deal with non stationarity of covariances parameters (angles, ranges, sills, ...) have been totally changed. See Tuto_NoStat.ipynb for a full description.
- SPDE now available in multivariate context (see Tuto_multivarSPDE.ipynb)
- Improve R package stability
- Reduce drastically moving neighborhood computation time
- Correcting severe bug in quick interpolators (movingAverage, inverseDistance, ...)
- law_exp_sample() now returns a VectorDouble (instead of double *)
- In Db::createFilLRandom, use of 'ncode' has been corrected
- Method computeLogLike() is renamed in computeLogLikelihood()
- Matrix methods named *Norm* use pointers to Matrix rather than references
- New method to initialize AStringable(const String& title) which prints the title in display()
- Internal function mesArg() is abandoned in favor of checkArg()
- A new bench_NF to help optimizing the read and write in Neutral Files
- Adding method 'display' for any item of class VectorT