@@ -73,8 +73,7 @@ typedef unsigned char UChar;
 
 #define MAX_INT     1000000000
 #define MAX_PARAM   1000
-#define MAX_EXP     5      // Maximum value for exp(-h)
-#define MAX_EXP2    10     // Maximum value for exp(-h^2)
+#define MAX_EXP     100    // Maximum value of h for exp(-h)
 
 #define THRESH_INF      -10
 #define THRESH_SUP       10
